test/syntaxerrors/TestDetectReservedKeyword3.jdc
return();

void return {
   //do something
}